<resources>
    <string name="app_name">Nutrition Calorie Counter</string>

    <string name="sign_out_button_text">Log Out</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to MyApp!</string>
    <string name="error_message">An error occurred. Please try again later.</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="goal_gain_mass">Gain weight</string>
    <string name="goal_lose_weight">Lose weight</string>
    <string name="goal_maintain_weight">Maintain weight</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="emptyField">Fill empty field!</string>
    <string name="totalSteps"> of 6 steps</string>
    <string name="profile_age">profile_age</string>
    <string name="profile_title">profile_title</string>
    <string name="profile_description">profile_Description</string>
    <string name="profile_desc_title" />
    <string name="profile_desc_summary" />
    <string name="recipes_title">Enter recipe name</string>
    <string name="recipes_select_item">Select Item</string>
    <string name="recipes_add_item">Add Item</string>
    <string name="recipes_consume">Consume</string>
    <string name="recipes_create_recipe">Create Recipe</string>
    <string name="recipes_clear">Clear</string>
    <string name="recipes_consume_pick_recipe">Select Recipe</string>
    <string name="recipes_consume_recipe">Consume</string>
    <string name="recipes_consume_firstProduct">Product</string>
    <string name="recipes_consume_secondProduct">Product</string>
    <string name="recipes_consume_thirdProduct">Product</string>
    <string name="edit_profile">edit_profile</string>
    <string name="edit_age_text">edit_age_text</string>
    <string name="value_hint" />
    <string name="value" />
    <string name="edit_eight_text" />
    <string name="edit">EDIT</string>
    <string name="enter_your_gender">What\'s your gender?</string>
    <string name="enter_your_goal">What\'s your goal?</string>
    <string name="enter_your_activity_level">What\'s your activity level?</string>
    <string name="enter_your_age">What\'s your age?</string>
    <string name="enter_your_height_in_cm">What\'s your weight? (kg)</string>
    <string name="enter_your_weight_in_kg">What\'s your height? (cm)</string>
</resources>